--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,6 +19,17 @@ font-family: 'Roboto', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.carosello{
+    width: 300px;
+    height: 300px;
 
+    background-color: brown;
+}
 
